--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -21,6 +21,24 @@
                                 <state key="normal" title="Button">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AKf-AN-9BM"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yGe-gd-Qxy">
+                                <rect key="frame" x="279" y="403" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CHZ-gQ-CVa">
+                                <rect key="frame" x="277" y="216" width="65" height="30"/>
+                                <state key="normal" title="Press2nd">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="ifLabelChanges:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2Kt-vA-Sc6"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -29,10 +47,13 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="50Z-tZ-gub" secondAttribute="bottom" constant="265" id="gyP-BW-Q9J"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="yGe-gd-Qxy" id="iWu-He-EGv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="341" y="87"/>
+            <point key="canvasLocation" x="341" y="81"/>
         </scene>
     </scenes>
 </document>
